# finanzas

./: .gitignore  LICENSE.md  README.md  claude.txt  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
docs/: CONTEXTO_METAS_FASE4.md  METAS_MODULE_PROGRESS.md  architecture.md  commands_contract.md  plan.md  schema_finanzas.sql
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  credentials.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  utils.rs
src-tauri/src/commands/: budgets.rs  fillups.rs  gas.rs  goals.rs  loans.rs  metas.rs  mod.rs  routes.rs  system.rs  transactions.rs  vehicles.rs
src-tauri/src/models/: mod.rs
src-tauri/src/repositories/: budgets.rs  fillups.rs  gas.rs  goals.rs  loans.rs  mod.rs  routes.rs  transactions.rs  vehicles.rs
src-tauri/src/services/: budgets.rs  fillups.rs  gas.rs  goals.rs  loans.rs  metas.rs  mod.rs  routes.rs  system.rs  transactions.rs  vehicles.rs
src/lib/: appStore.svelte.ts  constants.ts  txState.svelte.ts  types.ts
src/lib/api/: budgets.ts  fillups.ts  gas.ts  goals.ts  index.ts  loans.ts  metas.ts  routes.ts  system.ts  transactions.ts  vehicles.ts
src/lib/components/: CustomSelect.svelte  DatePicker.svelte  Nav.svelte  PaymentModal.svelte  ScrollArea.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/config/: +page.svelte
src/routes/historial/: +page.svelte
src/routes/metas/: +page.svelte
src/routes/objetivos/: +page.svelte
static/: site.webmanifest
(+2 files in other folders)
