[package]
name = "finanzas"
version = "0.1.0"
description = "App de gestión financiera personal"
authors = ["justlugoo"]
edition = "2021"

[lib]
name = "finanzas_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "finanzas"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
libsql = "0.9"
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["std", "clock"] }
