[package]
name = "finanzas"
version = "1.0.0"
description = "App de gestión financiera personal"
authors = ["justlugoo"]
edition = "2024"

[lib]
name = "finanzas_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "finanzas"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
libsql = { version = "0.9", default-features = false, features = ["core"] }
dirs = "5"
chrono = { version = "0.4", features = ["std", "clock"] }
